# level3.sevEval

./: .env.example  .gitignore  ARCHIVED_TESTS.md  README.md  demo_interactive.py  nemo.html  new.html  pyproject.toml  requirements.txt  security_report.html
.github/workflows/: secret-scan.yml
examples/: basic_evaluation.py
level3/: __init__.py  _base.py  cli.py  evaluator.py  ui_styles.tcss
level3/datasets/: __init__.py  loader.py
level3/datasets/promptlib/: dataset.json
level3/metrics/: __init__.py  base.py  jailbreak_sentinel.py  mock_metric.py  nemo_guard.py  registry.py  wildguard.py
level3/reporting/: __init__.py  generator.py
level3/reporting/templates/: report.html
level3/utils/: __init__.py  config.py  helpers.py  results_config.py
scripts/: scan_secrets.py
testing_benchmarking/: .gitignore  README.md  pytest.ini  testing_requirements.txt
testing_benchmarking/benchmarks/: benchmark_metrics.py
testing_benchmarking/unit_tests/: test_base_classes.py
tests/: test_datasets.py  test_metrics.py
